# chat-echo

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: index.html
src/: bridge.rs  config.rs  lib.rs  main.rs  ws.rs
static/: chat.js  index.html  style.css
